@@ -2,6 +2,7 @@
 
 	* src/foldersel.c: removed alloca() calls.
 	* src/account_dialog.c: account_open(): removed alloca() call.
+	* src/folderview.c: removed alloca() calls.
 
 2011-06-24
 
